feat(webview): replace textarea with CodeMirror for SQL input
Replaces the plain textarea in the SQL input webview with a full-featured CodeMirror editor to improve the user experience.

The previous implementation used a standard `<textarea>`, which lacked essential features like syntax highlighting and line numbers, making it difficult to write and review complex queries.

This change integrates CodeMirror by:
- Adding the necessary CSS and JavaScript assets from a CDN.
- Initializing the editor with SQL mode, line numbers, and a theme that respects the VS Code editor background.
- Updating the webview script to use the CodeMirror API (`getValue()`) to retrieve the query content.

--- a/media/PgSQLInputWebView.html
+++ b/media/PgSQLInputWebView.html
@@ -4,6 +4,10 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>SQL Query</title>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.16/codemirror.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.16/theme/material-darker.min.css">
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.16/codemirror.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.16/mode/sql/sql.min.js"></script>
 	<style>
 		body { 
 			font-family: sans-serif; 
@@ -14,13 +18,17 @@
 			color: var(--vscode-editor-foreground);
 			background-color: var(--vscode-editor-background);
 		}
-		.editor-container { padding: 10px; }
-		#sql-editor { 
-			width: 100%; 
-			height: 150px; 
+		.editor-container { 
+			padding: 10px; 
+			position: relative;
+		}
+		/* CodeMirror styles */
+		.CodeMirror {
+			height: 150px;
+			width: 100%;
 			box-sizing: border-box;
-			background-color: var(--vscode-input-background);
-			color: var(--vscode-input-foreground);
+			background-color: var(--vscode-input-background) !important;
+			color: var(--vscode-input-foreground) !important;
 			border: 1px solid var(--vscode-input-border);
 		}
 		.error-container { padding: 10px; color: red; }
@@ -50,6 +58,7 @@
 	</div>
 	<div id="error-container" class="error-container"></div>
 	<div id="result-container" class="result-container"></div>
+
 	<script src="{{webviewScriptUri}}"></script>
 </body>
 </html>
